kube/cr_service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "cloud-run-backend"}'
  name: cloud-run-test-service
spec:
  type: ExternalName
  externalName: "test-service-5bkeoexgxq-uc.a.run.app"
