kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  selector:
    app: test-service-inst
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
