kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  rules:
  -  http:
      paths:
      - path: /kube
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80
