kube/second_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-cr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: "test-service-5bkeoexgxq-uc.a.run.app"
spec:
  rules:
  -  http:
      paths:
      - path: /cr
        pathType: Prefix
        backend:
          service:
            name: cloud-run-test-service
            port:
              number: 80
